--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.2.3",
     "joi": "^17.7.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
