--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
+    "formik": "^2.4.3",
     "joi": "^17.7.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
